--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: python
 python:
   - "2.7"
-install: "pip install -q sphinx"
+install:
+  - pip install -q sphinx
+  - pip install -r requirements.txt
 script: sphinx-build -nW -b html -d _build/doctrees . _build/html
 
 # Flags used here, not in `make html`:
