--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
   - "2.7"
 install:
   - pip install -q sphinx
-  - pip install -r requirements.txt
+before_script: echo "master_doc = 'index'" > conf.py
 script: sphinx-build -nW -b html -d _build/doctrees . _build/html
 
 # Flags used here, not in `make html`:
